# Noto

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
patches/: react-arborist+3.5.0.patch
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/assets/: commands.rs
src-tauri/src/auth/: commands.rs  mod.rs  oauth.rs  token_store.rs  types.rs
src-tauri/src/drive/: client.rs  commands.rs  mod.rs  types.rs
src-tauri/src/sync/: commands.rs  db.rs  engine.rs  mod.rs  types.rs
src/components/auth/: AuthScreen.tsx
src/components/editor/: BubbleMenuBar.tsx  EditorToolbar.tsx  ImageExtension.ts  InkEditor.tsx  NoteEditor.tsx  ResizableImageView.tsx  SlashMenu.tsx  extensions.ts  mathEditing.ts
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/ui/: ArboristNode.tsx  FileTreeItem.tsx  FolderTreeItem.tsx  NoteCard.tsx
src/hooks/: useAutoSave.ts
src/lib/: markdown.ts  markdownPaste.ts  tauri.ts  types.ts
src/stores/: authStore.ts  notesStore.ts
