[package]
name = "noto"
version = "0.1.0"
description = "Noto — Markdown notes on Google Drive"
authors = ["Taniguchi Tomohiro"]
edition = "2021"

[lib]
name = "noto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros", "io-util", "sync"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
tauri-plugin-deep-link = "2"
window-vibrancy = "0.7"
